change connection rds

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_USERNAME = root
-DB_PASSWORD = 12345
+DB_USERNAME = admin
+DB_PASSWORD = 12345678
 DB_PORT     = 3306
 DB_HOST     = localhost
-DB_NAME     = miniproject
+DB_NAME     = miniprojectdb.c2t69q0dorvz.ap-southeast-2.rds.amazonaws.com
 SECRET_KEY  = DEVIS123
