change port to 8080

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_USERNAME = admin
 DB_PASSWORD = 12345678
 DB_PORT     = 3306
-DB_HOST     = localhost
-DB_NAME     = miniprojectdb.c2t69q0dorvz.ap-southeast-2.rds.amazonaws.com
+DB_HOST     = miniprojectdb.c2t69q0dorvz.ap-southeast-2.rds.amazonaws.com
+DB_NAME     = miniproject
 SECRET_KEY  = DEVIS123
